[gd_scene load_steps=13 format=3 uid="uid://cinm56ngjwv4"]

[ext_resource type="Script" path="res://Scripts/WavesSurvived.gd" id="1_6ge1s"]
[ext_resource type="FontFile" uid="uid://bkajaq0rspunx" path="res://Assets/Font/Minecraft.ttf" id="1_w8wvk"]
[ext_resource type="Texture2D" uid="uid://b73x3sme10gki" path="res://Assets/Art/Menu/Menu.png" id="2_5iiml"]
[ext_resource type="Script" path="res://Scripts/MenuController.gd" id="2_lscff"]
[ext_resource type="Texture2D" uid="uid://btonw1qivt0x7" path="res://Assets/Art/Button/Button.png" id="4_6ugd2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f517x"]
texture = ExtResource("4_6ugd2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ke05"]
texture = ExtResource("4_6ugd2")
modulate_color = Color(0.709804, 0.709804, 0.709804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lbr4f"]
texture = ExtResource("4_6ugd2")
modulate_color = Color(0.396078, 0.396078, 0.396078, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_keuf2"]
texture = ExtResource("4_6ugd2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tfmtk"]
texture = ExtResource("4_6ugd2")
modulate_color = Color(0.709804, 0.709804, 0.709804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6j0gt"]
texture = ExtResource("4_6ugd2")
modulate_color = Color(0.396078, 0.396078, 0.396078, 1)

[sub_resource type="Theme" id="Theme_k2emy"]

[node name="GameOverScreen" type="Control" node_paths=PackedStringArray("wavesText")]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6ge1s")
wavesText = NodePath("SurvivedWavesText")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(1, 3)
texture = ExtResource("2_5iiml")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = -23.0
offset_right = 50.0
offset_bottom = 102.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -5

[node name="RetryButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_w8wvk")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_f517x")
theme_override_styles/hover = SubResource("StyleBoxTexture_3ke05")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lbr4f")
script = ExtResource("2_lscff")

[node name="RetryLabel" type="Label" parent="VBoxContainer/RetryButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -36.0
offset_right = 2806.0
offset_bottom = 464.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_w8wvk")
theme_override_font_sizes/font_size = 300
text = "RETRY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_w8wvk")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_keuf2")
theme_override_styles/hover = SubResource("StyleBoxTexture_tfmtk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6j0gt")
script = ExtResource("2_lscff")

[node name="QuitLabel" type="Label" parent="VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -37.0
offset_right = 2806.0
offset_bottom = 463.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_w8wvk")
theme_override_font_sizes/font_size = 300
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -92.0
offset_right = 2806.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_w8wvk")
theme_override_font_sizes/font_size = 500
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SurvivedWavesText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -50.0
offset_right = 2893.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_w8wvk")
theme_override_font_sizes/font_size = 300
horizontal_alignment = 1
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = 1.0
offset_right = -50.0
offset_bottom = 41.0
theme = SubResource("Theme_k2emy")

[connection signal="pressed" from="VBoxContainer/RetryButton" to="VBoxContainer/RetryButton" method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="VBoxContainer/RetryButton" method="_on_quit_button_pressed"]
