[gd_scene load_steps=11 format=3 uid="uid://c75tqdf2wp6el"]

[ext_resource type="Script" path="res://Scripts/MenuController.gd" id="1_lauor"]
[ext_resource type="FontFile" uid="uid://bkajaq0rspunx" path="res://Assets/Font/Minecraft.ttf" id="2_gi5b1"]
[ext_resource type="Texture2D" uid="uid://b73x3sme10gki" path="res://Assets/Art/Menu/Menu.png" id="2_o137w"]
[ext_resource type="Texture2D" uid="uid://btonw1qivt0x7" path="res://Assets/Art/Button/Button.png" id="4_qpar0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lby0d"]
texture = ExtResource("4_qpar0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3frnj"]
texture = ExtResource("4_qpar0")
modulate_color = Color(0.709804, 0.709804, 0.709804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l00hr"]
texture = ExtResource("4_qpar0")
modulate_color = Color(0.396078, 0.396078, 0.396078, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m08xh"]
texture = ExtResource("4_qpar0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t2buj"]
texture = ExtResource("4_qpar0")
modulate_color = Color(0.709804, 0.709804, 0.709804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l8jrn"]
texture = ExtResource("4_qpar0")
modulate_color = Color(0.396078, 0.396078, 0.396078, 1)

[node name="OptionsMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lauor")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(900, 801)
texture = ExtResource("2_o137w")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -148.5
offset_right = -45.0
offset_bottom = -33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -5

[node name="ResumeButton" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_gi5b1")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxTexture_lby0d")
theme_override_styles/hover = SubResource("StyleBoxTexture_3frnj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_l00hr")
action_mode = 0
text = "
"

[node name="Label2" type="Label" parent="Menu/VBoxContainer/ResumeButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 12.5
offset_right = 2004.0
offset_bottom = 512.5
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_gi5b1")
theme_override_font_sizes/font_size = 300
text = "RESUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_gi5b1")
theme_override_styles/normal = SubResource("StyleBoxTexture_m08xh")
theme_override_styles/hover = SubResource("StyleBoxTexture_t2buj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_l8jrn")
action_mode = 0

[node name="Label3" type="Label" parent="Menu/VBoxContainer/QuitButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 12.5
offset_right = 2004.0
offset_bottom = 512.5
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_gi5b1")
theme_override_font_sizes/font_size = 300
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Menu"]
offset_left = -46.0
offset_top = -93.0
offset_right = 1956.0
offset_bottom = 407.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_gi5b1")
theme_override_font_sizes/font_size = 500
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Menu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
